tests/bonsai/error/negate-unsigned.bonsai
func foo() -> u32 {
    // TODO: fix ^ marker in error message
    return -1u;
}
