tests/bonsai/error/negate-unsigned.expect
---CODE---
-1
---STDERR---
tests/bonsai/error/negate-unsigned.bonsai:3:16: lex error: negated unsigned integer
    return -1u;
                ^
[internal] Error: src/Parser/Parser.cpp:818
Unknown token in parseBaseExpr: error at line: 3
